--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1746,7 +1746,7 @@ input, select, textarea {
 	}
 
 		.image img {
-			display: block;
+			display: inline-block;
 			width: 100%;
 		}
     .image.portrait {
@@ -1758,6 +1758,17 @@ input, select, textarea {
           width: 280px;
           margin: 1em 0 0 0;
           object-fit: cover;
+      }
+    
+    .image.logo {
+      display: inline-block;
+    }
+  
+      .image.logo img {
+        height: 40px;
+        width: 50px;
+        margin: 0 0 -0.3em 0;
+        object-fit: contain;
       }
 
 		.image.centered {
@@ -1780,6 +1791,21 @@ input, select, textarea {
 			float: left;
 			margin: 0 2em 2em 0;
 		}
+
+    .video-container {
+      position: relative;
+      padding-bottom: 70.25%; /* Aspect ratio */
+      height: 0;
+      overflow: hidden;
+    }
+        
+    .video-container video {
+      position: absolute;
+      top: 1em;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 
 /* List */
 
