--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1754,10 +1754,11 @@ input, select, textarea {
     }
 
       .image.portrait img {
-          height: 250px;
+          height: 350px;
           width: 280px;
           margin: 1em 0 0 0;
           object-fit: cover;
+		  display: block;
       }
     
     .image.logo {
